--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
   </p>
 buya
 updated by lkhamaa
+  
+  
+  <h1 style="margin:0 auto; display: block; color: red;">Хонгор минь</h1>
+  
+  
 </body>
 
 </html>
