--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 buya
 updated by lkhamaa
   
-  
+  oo yu bndaa
   <h1 style="margin:0 auto; display: block; color: red;">Хонгор минь</h1>
   
   
