--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <a href="index.html">Home</a> <a href="hobbies.html">My Hobbies</a>
-  <a href="contact info.html">Contact me</a>
+  <a href="contact-info.html">Contact me</a>
 
   <hr>
   <table cellspacing="20">
@@ -111,9 +111,8 @@
 
   <p> <strong> <a href="contact info.html">Contact me</a></strong>
   </p>
+buya
 
-  
-  
 </body>
 
 </html>
