--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
   </head>
 <a href="index.html">Home</a>
 <a href="hobbies">My Hobbies</a>
-<a href="contact info.html">Contact me</a>
+<a href="contact-info.html">Contact me</a>
 
   <body><h3>My hobbies</h3>
 
