--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>
           Lkham-Erdene Nyamjav
         </h1>
-        <p>Founder and Developer of <strong><a href="http://127.0.0.1:3000/index.html">Amy's personol site</a></strong> </p>
+        <p>Founder and Developer of <strong><a href="index.html">Amy's personal site</a></strong> </p>
         <p>Hi my name is Amy. I 💖 kpop music and coffee. I study at <a href="https://www.glendale.edu/">GCC.</a></p>
 
       </td>
@@ -106,12 +106,7 @@
   <hr>
 
 
-  <p> <strong> <a href="hobbies.html">My Hobbies</a> </strong>
-  </p>
 
-  <p> <strong> <a href="contact info.html">Contact me</a></strong>
-  </p>
-buya
 
 </body>
 
