--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <hr>
   <h4><strong>Work and life experience in the first time USA.</strong></h4>
 
-  <table cellspacing="10" border="1">
+  <table cellspacing="10">
     <thead>
     <tr>
       <th>Dates</th>
